conformance/tests/httproute-invalid-reference-policy.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: ReferencePolicy
metadata:
  name: invalid-reference-policy
  namespace: gateway-conformance-app-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Service
      name: app-backend-v1
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: invalid-reference-policy
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: app-backend-v1
      namespace: gateway-conformance-app-backend
      port: 8080
      weight: 90
    - name: app-backend-v2
      namespace: gateway-conformance-app-backend
      port: 8080
      weight: 10
